# internal/adapter/driving/http/handler/me.go
@@ -199,6 +199,7 @@ func (ref *MeHandler) authz(w http.ResponseWriter, r *http.Request) {
 		CreatedAt:    user.CreatedAt,
 		UpdatedAt:    user.UpdatedAt,
 		Disabled:     user.Disabled,
+		Verified:     user.Verified,
 		Admin:        user.Admin,
 		LocalAccount: user.LocalAccount,
 		FirstName:    user.FirstName,
@@ -379,6 +380,7 @@ func (ref *MeHandler) getByID(w http.ResponseWriter, r *http.Request) {
 		CreatedAt:    out.CreatedAt,
 		UpdatedAt:    out.UpdatedAt,
 		Disabled:     out.Disabled,
+		Verified:     out.Verified,
 		Admin:        out.Admin,
 		LocalAccount: out.LocalAccount,
 		FirstName:    out.FirstName,
